# linkerd2-proxy

./: Cargo.toml  Dockerfile-proxy  rust-toolchain.toml
.cargo/: config.toml
crates/axum/axum/: Cargo.toml
crates/axum/axum-core/: Cargo.toml
crates/boring/: Cargo.toml
crates/boring/boring/: Cargo.toml
crates/boring/boring-sys/: Cargo.toml
crates/boring/tokio-boring/: Cargo.toml
crates/h2/: Cargo.toml
crates/h2/fuzz/: Cargo.toml
crates/h2/src/proto/: connection.rs
crates/h2/src/proto/streams/: prioritize.rs  recv.rs  send.rs  streams.rs
crates/hyper/: Cargo.toml
crates/hyper-timeout/: Cargo.toml
crates/hyper/src/client/: conn.rs
crates/hyper/src/proto/h1/: dispatch.rs
crates/hyper/src/proto/h2/: client.rs  ping.rs  server.rs
crates/hyper/src/server/: conn.rs
crates/linkerd2-proxy-api/: Cargo.toml
crates/linkerd2-proxy-api/src/: http_types.rs  net.rs
crates/tokio/: Cargo.toml
crates/tokio-rustls/: Cargo.toml
crates/tonic/: Cargo.toml
crates/tonic/interop/: Cargo.toml
crates/tonic/tests/compression/: Cargo.toml
crates/tonic/tests/integration_tests/: Cargo.toml
crates/tonic/tonic/: Cargo.toml
crates/tower/: Cargo.toml
crates/tower/examples/: Cargo.toml
hyper-balance/: Cargo.toml
linkerd/app/: Cargo.toml
linkerd/app/admin/: Cargo.toml
linkerd/app/core/: Cargo.toml
linkerd/app/gateway/: Cargo.toml
linkerd/app/inbound/: Cargo.toml
linkerd/app/inbound/fuzz/: Cargo.toml
linkerd/app/inbound/src/policy/: http.rs
linkerd/app/integration/: Cargo.toml
linkerd/app/integration/src/: policy.rs
linkerd/app/outbound/: Cargo.toml
linkerd/app/outbound/src/http/: endpoint.rs  handle_proxy_error_headers.rs  require_id_header.rs  retry.rs
linkerd/app/test/: Cargo.toml
linkerd/detect/: Cargo.toml
linkerd/detect/src/: lib.rs
linkerd/distribute/: Cargo.toml
linkerd/dns/: Cargo.toml
linkerd/duplex/: Cargo.toml
linkerd/error-respond/: Cargo.toml
linkerd/error-respond/src/: lib.rs
linkerd/exp-backoff/: Cargo.toml
linkerd/http-access-log/: Cargo.toml
linkerd/http-metrics/: Cargo.toml
linkerd/http-metrics/src/requests/: service.rs
linkerd/http-retry/: Cargo.toml
linkerd/idle-cache/: Cargo.toml
linkerd/io/: Cargo.toml
linkerd/meshtls/: Cargo.toml
linkerd/meshtls/boring/: Cargo.toml
linkerd/meshtls/rustls/: Cargo.toml
linkerd/meshtls/src/: server.rs
linkerd/metrics/: Cargo.toml
linkerd/metrics/src/: new_metrics.rs
linkerd/opencensus/: Cargo.toml
linkerd/pool/p2c/: Cargo.toml
linkerd/pool/p2c/src/: lib.rs
linkerd/proxy/api-resolve/: Cargo.toml
linkerd/proxy/balance/: Cargo.toml
linkerd/proxy/balance/queue/: Cargo.toml
linkerd/proxy/balance/queue/src/: service.rs  worker.rs
linkerd/proxy/dns-resolve/: Cargo.toml
linkerd/proxy/http/: Cargo.toml
linkerd/proxy/http/fuzz/: Cargo.toml
linkerd/proxy/http/src/: h2.rs  override_authority.rs  server.rs
linkerd/proxy/identity-client/: Cargo.toml
linkerd/proxy/resolve/: Cargo.toml
linkerd/proxy/spire-client/: Cargo.toml
linkerd/proxy/tap/: Cargo.toml
linkerd/proxy/tap/src/: accept.rs  service.rs
linkerd/proxy/tap/src/grpc/: match_.rs
linkerd/proxy/tcp/: Cargo.toml
linkerd/proxy/transport/: Cargo.toml
linkerd/reconnect/: Cargo.toml
linkerd/retry/src/: lib.rs
linkerd/service-profiles/: Cargo.toml
linkerd/service-profiles/src/: http.rs
linkerd/service-profiles/src/http/: proxy.rs
linkerd/signal/: Cargo.toml
linkerd/stack/: Cargo.toml
linkerd/stack/metrics/: Cargo.toml
linkerd/tls/: Cargo.toml
linkerd/tls/src/: client.rs
linkerd/tonic-stream/: Cargo.toml
linkerd/tonic-watch/: Cargo.toml
linkerd/trace-context/: Cargo.toml
linkerd/tracing/: Cargo.toml
linkerd/tracing/src/: lib.rs
linkerd/transport-header/: Cargo.toml
linkerd/transport-header/fuzz/: Cargo.toml
linkerd/transport-metrics/: Cargo.toml
linkerd2-proxy/: Cargo.toml
linkerd2-proxy/src/: main.rs
