[workspace]
# Cargo should not unify feature flags across dev-dependencies and build
# dependencies. This will be the default behavior in Rust 2021.
resolver = "2"

members = [
    # Vic: added to compile with vendored-in tokio.
    "crates/tokio/tokio",
    "crates/tokio/tokio-macros",
    #"crates/tokio/tokio-test",
    "crates/tokio/tokio-stream",
    "crates/tokio/tokio-util",

    "crates/boring/boring",
    "crates/boring/boring-sys",
    "crates/boring/tokio-boring",

    "crates/tower/tower",
    "crates/tower/tower-layer",
    "crates/tower/tower-service",

    "crates/tonic/tonic",

    "hyper-balance",
    "linkerd/addr",
    "linkerd/app/admin",
    "linkerd/app/core",
    "linkerd/app/gateway",
    "linkerd/app/inbound",
    "linkerd/app/integration",
    "linkerd/app/outbound",
    "linkerd/app/test",
    "linkerd/app",
    "linkerd/conditional",
    "linkerd/distribute",
    "linkerd/detect",
    "linkerd/dns/name",
    "linkerd/dns",
    "linkerd/duplex",
    "linkerd/error",
    "linkerd/errno",
    "linkerd/error-respond",
    "linkerd/exp-backoff",
    "linkerd/http-access-log",
    "linkerd/http-box",
    "linkerd/http-classify",
    "linkerd/http-metrics",
    "linkerd/http-retry",
    "linkerd/http-route",
    "linkerd/identity",
    "linkerd/idle-cache",
    "linkerd/io",
    "linkerd/meshtls",
    "linkerd/meshtls/boring",
    "linkerd/meshtls/rustls",
    "linkerd/meshtls/verifier",
    "linkerd/metrics",
    "linkerd/opencensus",
    "linkerd/pool",
    "linkerd/pool/p2c",
    "linkerd/proxy/api-resolve",
    "linkerd/proxy/balance",
    "linkerd/proxy/balance/gauge-endpoints",
    "linkerd/proxy/balance/queue",
    "linkerd/proxy/client-policy",
    "linkerd/proxy/core",
    "linkerd/proxy/dns-resolve",
    "linkerd/proxy/http",
    "linkerd/proxy/identity-client",
    "linkerd/proxy/spire-client",
    "linkerd/proxy/resolve",
    "linkerd/proxy/server-policy",
    "linkerd/proxy/tap",
    "linkerd/proxy/tcp",
    "linkerd/proxy/transport",
    "linkerd/reconnect",
    "linkerd/retry",
    "linkerd/router",
    "linkerd/service-profiles",
    "linkerd/signal",
    "linkerd/stack",
    "linkerd/stack/metrics",
    "linkerd/stack/tracing",
    "linkerd/system",
    "linkerd/tonic-stream",
    "linkerd/tonic-watch",
    "linkerd/tls",
    "linkerd/tls/test-util",
    "linkerd/tracing",
    "linkerd/transport-header",
    "linkerd/transport-metrics",
    "linkerd2-proxy",
    "opencensus-proto",
    "spiffe-proto",
    "tools",
]

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
tower = { version = "0.4.13", path = "./crates/tower/tower" }
tower-service = { version = "0.3.2", path = "./crates/tower/tower-service" }
tower-layer = { version = "0.3.2", path = "./crates/tower/tower-layer" }
tower-test = { version = "0.4.0", path = "./crates/tower/tower-test" }

tonic = { version = "0.10.2", path = "./crates/tonic/tonic" }

boring-sys = { version = "3", path = "./crates/boring/boring-sys" }
boring = { version = "3", path = "./crates/boring/boring" }
tokio-boring = { version = "3", path = "./crates/boring/tokio-boring" }

bindgen = { version = "0.66.1", default-features = false, features = ["runtime"] }
cmake = "0.1.18"
fs_extra = "1.3.0"
fslock = "0.2"
bitflags = "2.4"
foreign-types = "0.5"
libc = "0.2"
hex = "0.4"
rusty-hook = "^0.11"
futures = "0.3"
tokio = { path = "./crates/tokio/tokio", features = ["full"] }
anyhow = "1"
antidote = "1.0.0"
http = "0.2"
hyper = { path = "./crates/hyper", default-features = false, features = ["full"] }
linked_hash_set = "0.1"
once_cell = "1.0"
