[package]
name = "hyper-balance"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
futures = { version = "0.3", default-features = false }
http = "0.2"
hyper =  { path = "../crates/hyper" }
pin-project = "1"
tower = { workspace = true, default-features = false, features = ["load"] }
tokio = { path = "../crates/tokio/tokio", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4"
