[package]
name = "linkerd-io"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
publish = false
description = """
General I/O primitives.
"""

[features]
default = []

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
bytes = "1"
linkerd-errno = { path = "../errno" }
tokio = { path = "../../crates/tokio/tokio", features = ["io-util", "net"] }
tokio-test = { path = "../../crates/tokio/tokio-test", optional = true }
tokio-util = { path = "../../crates/tokio/tokio-util", features = ["io"] }
pin-project = "1"

[dev-dependencies]
tokio = { path = "../../crates/tokio/tokio", features = ["rt", "macros"] }
