[package]
name = "linkerd-stack"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
publish = false
description = """
Utilities for composing Tower services.
"""

[features]
test-util = []

[dependencies]
futures = { version = "0.3", default-features = false }
linkerd-error = { path = "../error" }
parking_lot = "0.12"
pin-project = "1"
thiserror = "1"
tokio = { path = "../../crates/tokio/tokio", features = ["macros", "rt", "sync", "time"] }
tokio-util = { path = "../../crates/tokio/tokio-util" }
tower = { workspace = true, features = ["buffer", "filter", "spawn-ready", "util"] }
tracing = "0.1"

[dev-dependencies]
linkerd-tracing = { path = "../tracing", features = ["ansi"] }
tower-test = "0.4"
tokio-test = "0.4"
tokio = { path = "../../crates/tokio/tokio", features = ["rt-multi-thread", "time", "macros"] }
tower = { workspace = true, features = ["buffer", "filter", "util"] }
