[package]
name = "linkerd-app-outbound"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
publish = false
description = """
Configures and runs the outbound proxy
"""

[features]
default = []
allow-loopback = []
test-subscriber = []
test-util = ["linkerd-app-test", "linkerd-meshtls-rustls/test-util"]

[dependencies]
ahash = "0.8"
bytes = "1"
http = "0.2"
futures = { version = "0.3", default-features = false }
linkerd2-proxy-api = { version = "0.13", features = ["outbound"] }
linkerd-app-core = { path = "../core" }
linkerd-app-test = { path = "../test", optional = true }
linkerd-distribute = { path = "../../distribute" }
linkerd-http-classify = { path = "../../http-classify" }
linkerd-http-retry = { path = "../../http-retry" }
linkerd-http-route = { path = "../../http-route" }
linkerd-identity = { path = "../../identity" }
linkerd-meshtls-rustls = { path = "../../meshtls/rustls", optional = true }
linkerd-proxy-client-policy = { path = "../../proxy/client-policy", features = [
    "proto",
] }
linkerd-retry = { path = "../../retry" }
linkerd-tonic-stream = { path = "../../tonic-stream" }
linkerd-tonic-watch = { path = "../../tonic-watch" }
once_cell = "1"
parking_lot = "0.12"
prometheus-client = "0.22"
thiserror = "1"
tokio = { path = "../../../crates/tokio/tokio", features = ["sync"] }
tonic = { version = "0.10", default-features = false }
tower = { workspace = true, features = ["util"] }
tracing = "0.1"
pin-project = "1"

[dev-dependencies]
hyper = { path = "../../../crates/hyper", features = ["http1", "http2"] }
linkerd-app-test = { path = "../test", features = ["client-policy"] }
linkerd-io = { path = "../../io", features = ["tokio-test"] }
linkerd-meshtls = { path = "../../meshtls", features = ["rustls"] }
linkerd-meshtls-rustls = { path = "../../meshtls/rustls", features = [
    "test-util",
] }
linkerd-stack = { path = "../../stack", features = ["test-util"] }
linkerd-tracing = { path = "../../tracing", features = ["ansi"] }
parking_lot = "0.12"
tokio = { path = "../../../crates/tokio/tokio", features = ["macros", "sync", "time"] }
tokio-test = { path = "../../../crates/tokio/tokio-test" }
tower-test = "0.4"
