[package]
name = "linkerd-app-test"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
publish = false
description = """
Proxy test helpers
"""

[features]
client-policy = ["linkerd-proxy-client-policy", "tonic", "linkerd-http-route"]

[dependencies]
futures = { version = "0.3", default-features = false }
# h2 = "0.3"
h2 = { path = "../../../crates/h2" }
http = "0.2"
http-body = "0.4"
hyper = { path = "../../../crates/hyper", features = ["http1", "http2"] }
linkerd-app-core = { path = "../core" }
linkerd-http-route = { path = "../../http-route", optional = true }
linkerd-identity = { path = "../../identity" }
linkerd-proxy-client-policy = { path = "../../proxy/client-policy", optional = true }
linkerd-io = { path = "../../io", features = ["tokio-test"] }
parking_lot = "0.12"
pin-project = "1"
regex = "1"
tokio = { path = "../../../crates/tokio/tokio", features = ["io-util", "net", "rt", "sync"] }
tokio-test = { path = "../../../crates/tokio/tokio-test" }
tokio-stream = { path = "../../../crates/tokio/tokio-stream", features = ["sync"] }
tonic = { version = "0.10", default-features = false, optional = true }
tower = { workspace = true, default-features = false }
tracing = "0.1"
thiserror = "1"

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = [
    "env-filter",
    "fmt",
    "std",
]
