[package]
name = "linkerd-proxy-tap"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
http = "0.2"
hyper = { path = "../../../crates/hyper", features = ["http1", "http2"] }
futures = { version = "0.3", default-features = false }
ipnet = "2.7"
#linkerd2-proxy-api = { version = "0.13", features = ["tap"] }
linkerd2-proxy-api = { path = "../../../crates/linkerd2-proxy-api", features = ["tap"] }
linkerd-conditional = { path = "../../conditional" }
linkerd-error = { path = "../../error" }
linkerd-meshtls = { path = "../../meshtls" }
linkerd-io = { path = "../../io" }
linkerd-proxy-http = { path = "../http" }
linkerd-stack = { path = "../../stack" }
linkerd-tls = { path = "../../tls" }
parking_lot = "0.12"
prost-types = "0.12"
rand = { version = "0.8" }
thiserror = "1"
tokio = { path = "../../../crates/tokio/tokio", features = ["time"] }
tower = { workspace = true, default-features = false }
tonic = { path = "../../../crates/tonic/tonic", default-features = false }
tracing = "0.1"
pin-project = "1"

[dev-dependencies]
#linkerd2-proxy-api = { version = "0.13", features = ["arbitrary"] }
linkerd2-proxy-api = { path = "../../../crates/linkerd2-proxy-api", features = ["arbitrary"] }
quickcheck = { version = "1", default-features = false }
