[package]
name = "linkerd-proxy-tcp"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
publish = false


[dependencies]
futures = { version = "0.3", default-features = false }
linkerd-duplex = { path = "../../duplex" }
linkerd-error = { path = "../../error" }
linkerd-proxy-balance = { path = "../../proxy/balance" }
linkerd-stack = { path = "../../stack" }
rand = "0.8"
tokio = { path = "../../../crates/tokio/tokio" }
tower = { workspace = true, default-features = false }
pin-project = "1"
