[package]
name = "linkerd-proxy-transport"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
publish = false
description = """
Transport-level implementations that rely on core proxy infrastructure
"""

[dependencies]
futures = { version = "0.3", default-features = false }
linkerd-error = { path = "../../error" }
linkerd-io = { path = "../../io" }
linkerd-stack = { path = "../../stack" }
socket2 = "0.5"
thiserror = "1"
tokio = { path = "../../../crates/tokio/tokio", features = ["macros", "net"] }
tokio-stream = { path = "../../../crates/tokio/tokio-stream", features = ["net"] }
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
