[package]
name = "linkerd-stack-metrics"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
linkerd-metrics = { path = "../../metrics" }
parking_lot = "0.12"
tower = { workspace = true, default-features = false }
tokio = { path = "../../../crates/tokio/tokio", features = ["time"] }

[dev-dependencies]
tokio = { path = "../../../crates/tokio/tokio", features = ["macros"] }
tokio-test = "0.4"
tower-test = "0.4"
