[package]
name = "linkerd-proxy-balance-queue"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
futures = { version = "0.3", default-features = false }
parking_lot = "0.12"
pin-project = "1"
prometheus-client = "0.22"
thiserror = "1"
tokio = { path = "../../../../crates/tokio/tokio", features = ["rt", "sync", "time"] }
tokio-util = { path = "../../../../crates/tokio/tokio-util" }
tracing = "0.1"

linkerd-error = { path = "../../../error" }
linkerd-metrics = { path = "../../../metrics" }
linkerd-proxy-core = { path = "../../core" }
linkerd-pool = { path = "../../../pool" }
linkerd-stack = { path = "../../../stack" }

[dev-dependencies]
linkerd-tracing = { path = "../../../tracing" }
tokio-stream = { path = "../../../../crates/tokio/tokio-stream", features = ["sync"] }
tokio-test = { path = "../../../../crates/tokio/tokio-test" }
tower-test = "0.4"
